--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -1,3 +1,5 @@
+%TODO: Bibtex entry types kontrollieren https://de.wikipedia.org/wiki/BibTeX#Literaturtypen_.28Entry_Types.29
+
 @inproceedings{aloul2009two,
   title={Two factor authentication using mobile phones},
   author={Aloul, Fadi and Zahidi, Syed and El-Hajj, Wassim},
@@ -31,7 +33,7 @@
   pages={327--334},
   year={1997},
   publisher={Springer}
-}
+}d
 
 @incollection{dholi2013typing,
   title={Typing pattern recognition using keystroke dynamics},
@@ -129,6 +131,27 @@
   note = {Accessed: 2015-12-10}
 }
 
+@misc{devicemotionjavascript,
+  title = {DeviceOrientation Event Specification},
+  author = {Steve Block and Andrei Popescu},
+  howpublished = {\url{http://www.w3.org/TR/orientation-event/\#devicemotion}},
+  note = {Accessed: 2016-01-04}
+}
+
+@misc{sensoreventandroidreference,
+  title = {Android's SensorEvent API reference},
+  author = {{Android Open Source Project}},
+  howpublished = {\url{https://developer.android.com/reference/android/hardware/SensorEvent.html}},
+  note = {Accessed: 2016-01-05}
+}
+
+@misc{sensormanagerandroidreference,
+  title = {Android's SensorManager API reference},
+  author = {{Android Open Source Project}},
+  howpublished = {\url{https://developer.android.com/reference/android/hardware/SensorManager.html}},
+  note = {Accessed: 2016-01-09}
+}
+
 @article{starbug2008bastel,
   title={Basteltips Biometrieversand},
   author={evelyn and starbug},
@@ -145,4 +168,91 @@
   journal={Proceedings of the 8th USENIX conference on Offensive Technologies},
   publisher={USENIX Association},
   year={2014},
+}
+
+@article{monrose2000keystroke,
+  title={Keystroke dynamics as a biometric for authentication},
+  author={Monrose, Fabian and Rubin, Aviel D},
+  journal={Future Generation computer systems},
+  volume={16},
+  number={4},
+  pages={351--359},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@techreport{gaines1980authentication,
+  title={Authentication by keystroke timing: Some preliminary results},
+  author={Gaines, R Stockton and Lisowski, William and Press, S James and Shapiro, Norman},
+  year={1980},
+  institution={DTIC Document}
+}
+
+@mastersthesis{thesisschmidbartl,
+  title = {Analyse zur Identifizierung von Benutzern/Geräten anhand verschiedener Faktoren und Integration in ein Framework},
+  author = {Norbert Schmidbartl},
+  howpublished = {\url{www.os.in.tum.de/fileadmin/w00bdp/www/Lehre/Abschlussarbeiten/Thesis_Final._Schmidbartl.pdf}},
+  note = {Accessed: 2016-01-06}
+}
+
+@inproceedings{lee2002gait,
+  title={Gait analysis for recognition and classification},
+  author={Lee, Lily and Grimson, W Eric L},
+  booktitle={Automatic Face and Gesture Recognition, 2002. Proceedings. Fifth IEEE International Conference on},
+  pages={148--155},
+  year={2002},
+  organization={IEEE}
+}
+
+@article{johansson1975visual,
+  title={Visual motion perception},
+  author={Johansson, Gunnar},
+  journal={Scientific American},
+  year={1975},
+  publisher={Scientific American, Inc.}
+}
+
+@inproceedings{mantyjarvi2005identifying,
+  title={Identifying users of portable devices from gait pattern with accelerometers},
+  author={M{\"a}ntyj{\"a}rvi, Jani and Lindholm, Mikko and Vildjiounaite, Elena and M{\"a}kel{\"a}, Satu-Marja and Ailisto, HA},
+  booktitle={Acoustics, Speech, and Signal Processing, 2005. Proceedings.(ICASSP'05). IEEE International Conference on},
+  volume={2},
+  pages={ii--973},
+  year={2005},
+  organization={IEEE}
+}
+
+@article{derawi2013gait,
+  title={Gait and activity recognition using commercial phones},
+  author={Derawi, Mohammad and Bours, Patrick},
+  journal={computers \& security},
+  volume={39},
+  pages={137--144},
+  year={2013},
+  publisher={Elsevier}
+}
+
+@inproceedings{verbitskiy2003reliable,
+  title={Reliable biometric authentication with privacy protection},
+  author={Verbitskiy, Evgeny and Tuyls, Pim and Denteneer, Dee and Linnartz, JP},
+  booktitle={Proceedings of the 24th Benelux Symposium on Information theory},
+  year={2003}
+}
+
+@article{ross2011visual,
+  title={Visual cryptography for biometric privacy},
+  author={Ross, Arun and Othman, Asem},
+  journal={IEEE transactions on information forensics and security},
+  volume={6},
+  number={1},
+  pages={70--81},
+  year={2011},
+  publisher={Citeseer}
+}
+
+@misc{idc2015wristmarketshare,
+  title = {Market share of smart wristwear shipments worldwide by operating system in 2015 and 2019},
+  author = {{IDC}},
+  howpublished = {\url{http://www.statista.com/statistics/466563/share-of-smart-wristwear-shipments-by-operating-system-worldwide/}},
+  note = {Statista, Accessed: 2016-01-09}
 }
