--- a/glossary/acronyms.tex
+++ b/glossary/acronyms.tex
@@ -2,3 +2,7 @@
 \newacronym{otp}{OTP}{One Time Password}
 \newacronym{saas}{SaaS}{Software as a service}
 \newacronym{mfa}{MFA}{Multi--factor authentication}
+\newacronym{gsm}{GSM}{Global System for Mobile Communications, originally Groupe Spécial Mobile}
+\newacronym{umts}{UMTS}{Universal Mobile Telecommunications System}
+\newacronym{dtw}{DTW}{Dynamic time warping}
+\newacronym{cpm}{CPM}{Characters per minute}
