--- a/glossary/terms.tex
+++ b/glossary/terms.tex
@@ -1,5 +1,20 @@
-\newglossaryentry{computer}
+\newglossaryentry{app}
 {
-  name=computer,
-  description={is a machine that\ldots}
+  name=app,
+  description={An application program. A computer program designed for a specific type of application}
+}
+\newglossaryentry{keystrokedynamics}
+{
+  name=keystroke dynamics,
+  description={Individual characteristics in typing, e.g. key strokes, that can be used to identify users}
+}
+\newglossaryentry{Dynamictimewarping}
+{
+  name=dynamic time warping,
+  description={An algorithm measureing the similarity between time series data, compensating variations in time or speed}
+}
+\newglossaryentry{manhattandistance}
+{
+  name=Manhattan-Distance,
+  description={A distance measuring the distance between data points, accoring to the sum of the absolute differences of their coordinates}
 }
