--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,6 @@
 \input{settings/settings}
 \input{settings/commands}
 
-% TODO: remove if glossary not needed
 \input{glossary/terms}
 \input{glossary/acronyms}
 
@@ -33,17 +32,15 @@
 \input{chapters/03_implementation}
 \input{chapters/04_evaluation_and_interpretation}
 \input{chapters/05_prospects}
-% TODO: add more chapters here
 
 \appendix{}
 
- % TODO: remove if glossary not needed
 \glsaddall{} % add all defined terms to glossary, even if not referenced in text
 \printglossaries{}
 
 \microtypesetup{protrusion=false}
 \listoffigures{}
-\listoftables{}
+\lstlistoflistings{}
 \microtypesetup{protrusion=true}
 \printbibliography{}
 
