--- a/pages/acknowledgements.tex
+++ b/pages/acknowledgements.tex
@@ -9,6 +9,10 @@
 
 \vspace{1cm}
 
+Nils Kannengießer and Prof. Senjun Song as advisors
+Prof. Dr. Uwe Baumgarten as Supervisor
+The Chair of Operating Systems to provide test devices
+Many unnamed proofreaders.
 TODO: Acknowledgments
 
 \cleardoublepage{}
