--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -8,7 +8,7 @@
 \usepackage[%
   backend=biber,
   url=true,
-  style=alphabetic,
+  style=numeric,
   maxnames=4,
   minnames=3,
   maxbibnames=99,
@@ -26,5 +26,7 @@
 \usepackage[final]{microtype}
 \usepackage{caption}
 \usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
-\usepackage[toc,nonumberlist,acronym]{glossaries} % TODO: remove if glossary not needed
+\usepackage[toc,nonumberlist,acronym]{glossaries}
 \usepackage[sfdefault]{roboto}
+\usepackage[super]{nth}
+\usepackage{siunitx}
