--- a/settings/settings.tex
+++ b/settings/settings.tex
@@ -3,12 +3,11 @@
 \setkomafont{disposition}{\normalfont\bfseries} % use serif font for headings
 \linespread{1.05} % adjust line spread for mathpazo font
 
-% Settings for glossaries TODO: remove the following block if glossary not needed
 \renewcommand{\glsnamefont}[1]{\normalfont\bfseries #1} % use serif font for glossary entry titles
 \makeglossaries{}
 
 % Settings for pgfplots
-\pgfplotsset{compat=1.9} % TODO: adjust to your installed version
+\pgfplotsset{compat=1.12}
 \pgfplotsset{
   % For available color names, see http://www.latextemplates.com/svgnames-colors
   cycle list={CornflowerBlue\\Dandelion\\ForestGreen\\BrickRed\\},
@@ -16,11 +15,18 @@
 
 % Settings for lstlistings
 \lstset{%
-  basicstyle=\ttfamily,
+  float,
+  frame=single,
+  basicstyle={\small\ttfamily},
   columns=fullflexible,
   autogobble,
+  breaklines=true,
+  breakatwhitespace=true,
   keywordstyle=\bfseries\color{MediumBlue},
-  stringstyle=\color{DarkGreen}
+  stringstyle=\color{DarkGreen},
+  commentstyle=\color{Gray},
+  numberstyle=\tiny\color{Gray},
+  language=Java
 }
 
 \selectlanguage{american}
