--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -212,16 +212,6 @@
   publisher={Scientific American, Inc.}
 }
 
-@inproceedings{mantyjarvi2005identifying,
-  title={Identifying users of portable devices from gait pattern with accelerometers},
-  author={M{\"a}ntyj{\"a}rvi, Jani and Lindholm, Mikko and Vildjiounaite, Elena and M{\"a}kel{\"a}, Satu-Marja and Ailisto, HA},
-  booktitle={Acoustics, Speech, and Signal Processing, 2005. Proceedings.(ICASSP'05). IEEE International Conference on},
-  volume={2},
-  pages={ii--973},
-  year={2005},
-  organization={IEEE}
-}
-
 @article{derawi2013gait,
   title={Gait and activity recognition using commercial phones},
   author={Derawi, Mohammad and Bours, Patrick},
@@ -256,3 +246,61 @@
   howpublished = {\url{http://www.statista.com/statistics/466563/share-of-smart-wristwear-shipments-by-operating-system-worldwide/}},
   note = {Statista, Accessed: 2016-01-09}
 }
+
+@misc{tinevez2011peak,
+  title= {PeakDetector.java},
+  author={Jean-Yves Tinevez},
+  howpublished = {\url{https://code.google.com/p/fiji-bi/source/browse/src-plugins/FlowMate_/fiji/plugin/flowmate/analysis/PeakDetector.java?r=0ec4620b8e4aaebd183c2b57c89390595f574564}},
+  note = {Google Code, Accessed: 2016-01-14}
+}
+
+@article{ding2008querying,
+  title={Querying and mining of time series data: experimental comparison of representations and distance measures},
+  author={Ding, Hui and Trajcevski, Goce and Scheuermann, Peter and Wang, Xiaoyue and Keogh, Eamonn},
+  journal={Proceedings of the VLDB Endowment},
+  volume={1},
+  number={2},
+  pages={1542--1552},
+  year={2008},
+  publisher={VLDB Endowment}
+}
+
+@inproceedings{berndt1994using,
+  title={Using Dynamic Time Warping to Find Patterns in Time Series.},
+  author={Berndt, Donald J and Clifford, James},
+  booktitle={KDD workshop},
+  volume={10},
+  number={16},
+  pages={359--370},
+  year={1994},
+  organization={Seattle, WA}
+}
+
+@article{keogh2005exact,
+  title={Exact indexing of dynamic time warping},
+  author={Keogh, Eamonn and Ratanamahatana, Chotirat Ann},
+  journal={Knowledge and information systems},
+  volume={7},
+  number={3},
+  pages={358--386},
+  year={2005},
+  publisher={Springer}
+}
+
+@article{dudani1976distance,
+  title={The distance-weighted k-nearest-neighbor rule},
+  author={Dudani, Sahibsingh A},
+  journal={Systems, Man and Cybernetics, IEEE Transactions on},
+  number={4},
+  pages={325--327},
+  year={1976},
+  publisher={IEEE}
+}
+
+@misc{heaton2016encog,
+  title= {Encog Machine Learning Framework},
+  author={Heaton Research},
+  howpublished = {\url{http://www.heatonresearch.com/encog/}},
+  note = {Accessed: 2016-01-15}
+}
+
