--- a/glossary/acronyms.tex
+++ b/glossary/acronyms.tex
@@ -6,3 +6,4 @@
 \newacronym{umts}{UMTS}{Universal Mobile Telecommunications System}
 \newacronym{dtw}{DTW}{Dynamic time warping}
 \newacronym{cpm}{CPM}{Characters per minute}
+\newacronym{knn}{kNN}{the k-Nearest Neighbors algorithm}
