--- a/settings/settings.tex
+++ b/settings/settings.tex
@@ -17,7 +17,7 @@
 \lstset{%
   float,
   frame=single,
-  basicstyle={\small\ttfamily},
+  basicstyle={\ttfamily},
   columns=fullflexible,
   autogobble,
   breaklines=true,
