Updates from ShareLaTeX

--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -304,3 +304,9 @@
   note = {Accessed: 2016-01-15}
 }
 
+@misc{gartner2015smartosmarketshare,
+  title = {Global market share held by the leading smartphone operating systems in sales to end users from 1st quarter 2009 to 3rd quarter 2015},
+  author = {{Gartner}},
+  howpublished = {\url{http://www.statista.com/statistics/266136/global-market-share-held-by-smartphone-operating-systems/}},
+  note = {Statista, Accessed: 2016-01-16}
+}
