--- a/main.tex
+++ b/main.tex
@@ -25,7 +25,7 @@
 
 \mainmatter{}
 
-\nocite{*}
+%\nocite{*} % add all references to bibliography, even if not referenced in text
 
 \input{chapters/01_introduction}
 \input{chapters/02_approaches}
