Updates from ShareLaTeX

--- a/glossary/acronyms.tex
+++ b/glossary/acronyms.tex
@@ -7,3 +7,9 @@
 \newacronym{dtw}{DTW}{Dynamic time warping}
 \newacronym{cpm}{CPM}{Characters per minute}
 \newacronym{knn}{kNN}{the k-Nearest Neighbors algorithm}
+\newacronym{sql}{SQL}{Structured Query Language}
+\newacronym{api}{API}{Application Programming Interface}
+\newacronym{apk}{APK}{Android \gls{app} package file}
+\newacronym{ide}{IDE}{Integrated development environment}
+\newacronym{usb}{USB}{Universal Serial Bus}
+\newacronym{wifi}{WiFi}{A local area wireless networking technology}
