--- a/glossary/terms.tex
+++ b/glossary/terms.tex
@@ -1,20 +1,44 @@
-\newglossaryentry{app}
-{
-  name=app,
+\newglossaryentry{app} {
+  name=App,
   description={An application program. A computer program designed for a specific type of application}
 }
-\newglossaryentry{keystrokedynamics}
-{
-  name=keystroke dynamics,
+\newglossaryentry{keystrokedynamics} {
+  name=Keystroke dynamics,
   description={Individual characteristics in typing, e.g. key strokes, that can be used to identify users}
 }
-\newglossaryentry{Dynamictimewarping}
-{
-  name=dynamic time warping,
-  description={An algorithm measureing the similarity between time series data, compensating variations in time or speed}
+\newglossaryentry{Dynamictimewarping} {
+  name=Dynamic time warping,
+  description={An algorithm measuring the similarity between time series data as a distance, compensating variations in time or speed}
 }
-\newglossaryentry{manhattandistance}
-{
+\newglossaryentry{manhattandistance} {
   name=Manhattan-Distance,
-  description={A distance measuring the distance between data points, accoring to the sum of the absolute differences of their coordinates}
+  description={A metric measuring the distance between data points, according to the sum of the absolute differences between coordinates}
+}
+\newglossaryentry{euclideandistance} {
+  name=Euclidean distance,
+  description={A metric measuring the distance between data points, based on the square root of the sum of the squared absolute differences}
+}
+\newglossaryentry{patternrecognition} {
+  name=Pattern recognition,
+  description={Pattern recognition is a machine learning technique that can classify patterns based on previously learned patterns}
+}
+\newglossaryentry{clustering} {
+  name=Pattern recognition,
+  description={Pattern recognition is a machine learning technique that can classify patterns based on previously learned patterns}
+}
+\newglossaryentry{activity} {
+  name=Activity,
+  description={An Android Activity is the basic user interface of an Android \gls{app}. Activities can usually be launched from other \glspl{app} or the start menu}
+}
+\newglossaryentry{fragment}{
+  name=Fragment,
+  description={TODO: dynamic part of an activity}
+}
+\newglossaryentry{package}{
+  name=Package,
+  description={TODO: a structure of organizing java code}
+}
+\newglossaryentry{accelerationsensor}{
+  name=Acceleration sensor,
+  description={TODO: sensor that is capable to measure inertial forces accelerating devices}
 }
