Updates from ShareLaTeX

--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -310,3 +310,22 @@
   howpublished = {\url{http://www.statista.com/statistics/266136/global-market-share-held-by-smartphone-operating-systems/}},
   note = {Statista, Accessed: 2016-01-16}
 }
+
+@article{cover1967nearest,
+  title={Nearest neighbor pattern classification},
+  author={Cover, Thomas M and Hart, Peter E},
+  journal={Information Theory, IEEE Transactions on},
+  volume={13},
+  number={1},
+  pages={21--27},
+  year={1967},
+  publisher={IEEE}
+}
+
+@misc{lewick2007clustering,
+  title = {Artificial Intelligence: Representation and Problem Solving - Clustering},
+  author = {Lewick, Michael S. and Mellon, Carnegie},
+  howpublished = {\url{https://www.cs.cmu.edu/afs/cs/academic/class/15381-s07/www/slides/042607clustering.pdf}},
+  year={2007},
+  note = {Accessed: 2016-01-20}
+}
