--- a/glossary/acronyms.tex
+++ b/glossary/acronyms.tex
@@ -6,7 +6,7 @@
 \newacronym{umts}{UMTS}{Universal Mobile Telecommunications System}
 \newacronym{dtw}{DTW}{Dynamic time warping}
 \newacronym{cpm}{CPM}{Characters per minute}
-\newacronym{knn}{kNN}{the k-Nearest Neighbors algorithm}
+\newacronym{knn}{k-NN}{$k$-Nearest Neighbors}
 \newacronym{sql}{SQL}{Structured Query Language}
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{apk}{APK}{Android \gls{app} package file}
