--- a/glossary/terms.tex
+++ b/glossary/terms.tex
@@ -15,7 +15,7 @@
   description={A metric measuring the distance between data points, according to the sum of the absolute differences between coordinates}
 }
 \newglossaryentry{euclideandistance} {
-  name=Euclidean distance,
+  name=euclidean distance,
   description={A metric measuring the distance between data points, based on the square root of the sum of the squared absolute differences}
 }
 \newglossaryentry{patternrecognition} {
@@ -32,13 +32,13 @@
 }
 \newglossaryentry{fragment}{
   name=Fragment,
-  description={TODO: dynamic part of an activity}
+  description={A Fragment in an Android context is a dynamic component of an Android \gls{activity}. Fragments are usually used to build virtual layouts that are larger than the physically displayed layouts and provide standardized interfaces to dynamically load content that probably is being showed next.}
 }
 \newglossaryentry{package}{
-  name=Package,
-  description={TODO: a structure of organizing java code}
+  name=package,
+  description={A Java package is a structure to organizing Java code into name-spaces. Classes in a package are usually dependent on each other, but preferably not on other classes.}
 }
 \newglossaryentry{accelerationsensor}{
   name=Acceleration sensor,
-  description={TODO: sensor that is capable to measure inertial forces accelerating devices}
+  description={An acceleration sensor (also called accelerometer) is a device that is capable of measuring the forces accelerating devices. These forces are often called ``g-forces'' from the gravitational force.}
 }
