--- a/pages/acknowledgements.tex
+++ b/pages/acknowledgements.tex
@@ -9,10 +9,10 @@
 
 \vspace{1cm}
 
-Nils Kannengießer and Prof. Senjun Song as advisors
-Prof. Dr. Uwe Baumgarten as Supervisor
-The Chair of Operating Systems to provide test devices
-Many unnamed proofreaders.
-TODO: Acknowledgments
+Special thanks go to Prof. Dr. Senjun Song and Nils Kannengießer, who gave me the opportunity to work on an international project. This intercontinental cooperation is only one of more to come. Nils especially guided be and taught me many things used in this thesis, esp.\ during the Android Practical Course in summer 2015.
+
+Many thanks also go to the Chair of Operating Systems at \gls{tum} for hosting this thesis and Prof. Dr. Uwe Baumgarten as a supervisor. The Chair of Operating Systems provided test devices, crucial for the concept of this thesis.
+
+I also want to thank H.\ Wang, T.\ Lai and R.\ Choudhury for their paper on Motion Leaks\cite{wang2015mole}, which initially sparked the ideas outlined in this thesis. Also thanks to many unnamed proofreaders and reviewers and everyone that supported me during writing.
 
 \cleardoublepage{}
