Updates from ShareLaTeX

--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -1,9 +1,10 @@
 \chapter{\abstractname}
-Every person displays characteristic patterns of behavior, that can be used to verify her or his identity. With the rise of personal smart devices, e.g. smartwatches or smartphones, these patterns can be recorded and analyzed.The resulting characteristics can be used as an additional factor in Multi-Factor Authentication or used as an intrusion detection system by reporting anomalies.
+Every person displays characteristic patterns of behavior, that can be used to verify her or his identity. With the rise of personal smart devices, \eg smartwatches or smartphones, these patterns can be recorded and analyzed. The resulting characteristics can be used as an additional factor in Multi-Factor Authentication or used as an intrusion detection system by reporting anomalies.
 In this paper, we analyze the patterns for motion, determined by measuring acceleration. We then evaluate how to efficiently, accurately, and practically extract behavioral patterns, identifying individual users. Furthermore, we developed Android smartphone and smartwatch app prototypes demonstrating the identification capabilities.
 
 \vspace{3cm}
 \selectlanguage{ngerman}
-Menschen besitzen charakteristische Verhaltensmuster, durch die sie eindeutig identifiziert werden können. Durch ständig mitgeführte Mobilgeräte, z.B. Smartphones oder Smartwatches, können diese Muster aufgezeichnet und analysiert werden. Die daraus abgeleiteten Merkmale können als zusätzlicher Faktor bei Multi"=Faktor"=Authentifizierungsverfahren oder als Angriffserkennungssystem eingesetzt werden.
-Im Rahmen dieser Arbeit werden diese Muster anhand von Beschleunigungssensoren, hinsichtlich effizienter und präziser Verhaltensmustererkennung, analysiert. Dies wird durch einen Prototypen einer Android Smartphone und Smartwatch App demonstriert.
+\noindent
+Menschen besitzen charakteristische Verhaltensmuster, durch die sie eindeutig identifiziert werden können. Durch ständig mitgeführte Mobilgeräte, wie Smartphones oder Smartwatches, können diese Muster aufgezeichnet und analysiert werden. Die daraus abgeleiteten Merkmale können als zusätzlicher Faktor bei Multi"=Faktor"=Authentifizierungsverfahren oder als Angriffserkennungssystem eingesetzt werden.
+Im Rahmen dieser Arbeit werden diese Muster anhand von Beschleunigungssensoren hinsichtlich effizienter und präziser Verhaltensmustererkennung analysiert. Diese Mustererkennungsverfahren werden durch Prototypen einer Android Smartphone und Smartwatch App demonstriert.
 \selectlanguage{american}
