Updates from ShareLaTeX

--- a/glossary/terms.tex
+++ b/glossary/terms.tex
@@ -1,5 +1,5 @@
 \newglossaryentry{app} {
-  name=App,
+  name=app,
   description={An application program. A computer program designed for a specific type of application}
 }
 \newglossaryentry{keystrokedynamics} {
@@ -7,7 +7,7 @@
   description={Individual characteristics in typing, e.g. key strokes, that can be used to identify users}
 }
 \newglossaryentry{Dynamictimewarping} {
-  name=Dynamic time warping,
+  name=Dynamic Time Warping,
   description={An algorithm measuring the similarity between time series data as a distance, compensating variations in time or speed}
 }
 \newglossaryentry{manhattandistance} {
