Updates from ShareLaTeX

--- a/settings/commands.tex
+++ b/settings/commands.tex
@@ -10,5 +10,5 @@
 \newcommand*{\getSubmissionDate}{15. February 2016}
 \newcommand*{\getSubmissionLocation}{Munich}
 \newcommand*{\etal}{et al.\ }
-\newcommand*{\eg}{e.g.\ } %TODO
+\newcommand*{\eg}{e.g.\ }
 \newcommand*{\ie}{i.e.\ }
