--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -13,7 +13,7 @@
   minnames=3,
   maxbibnames=99,
   firstinits,
-  uniquename=init]{biblatex} % TODO: adapt bibliography style
+  uniquename=init]{biblatex}
 \usepackage{graphicx}
 \usepackage{scrhack} % necessary for listings package
 \usepackage{listings}
