Numbers in PDF bookmarks! wohoo

--- a/settings/packages.tex
+++ b/settings/packages.tex
@@ -25,7 +25,7 @@
 \usepackage{url}
 \usepackage[final]{microtype}
 \usepackage{caption}
-\usepackage[hidelinks]{hyperref} % hidelinks removes colored boxes around references and links
+\usepackage[hidelinks, bookmarksnumbered]{hyperref} % hidelinks removes colored boxes around references and links
 \usepackage[toc,nonumberlist,acronym]{glossaries}
 \usepackage[sfdefault]{roboto}
 \usepackage[super]{nth}
