Updates from ShareLaTeX

--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -329,3 +329,26 @@
   year={2007},
   note = {Accessed: 2016-01-20}
 }
+
+@misc{manhattan2015encryption,
+  title = {Report on Smartphone Encryption and Public Safety},
+  author = {{The Manhattan district attroney's office}},
+  howpublished = {\url{http://manhattanda.org/sites/default/files/11.18.15\%20Report\%20on\%20Smartphone\%20Encryption\%20and\%20Public\%20Safety.pdf}},
+  year={2015},
+  note = {Accessed: 2016-02-05}
+}
+
+@misc{oneplusone,
+  howpublished = {\url{https://oneplus.net/one}},
+  note = {Accessed: 2016-02-05}
+}
+
+@misc{sonySW3,
+  howpublished = {\url{http://www.sonymobile.com/de/products/smartwear/smartwatch-3-swr50/}},
+  note = {Accessed: 2016-02-05}
+}
+
+@misc{smartyRing,
+  howpublished = {\url{http://http://smartyring.com/}},
+  note = {Accessed: 2016-02-05}
+}
