Updates from ShareLaTeX

--- a/glossary/acronyms.tex
+++ b/glossary/acronyms.tex
@@ -1,7 +1,7 @@
 \newacronym{tum}{TUM}{Technische Universität München}
 \newacronym{otp}{OTP}{One Time Password}
 \newacronym{saas}{SaaS}{Software as a service}
-\newacronym{mfa}{MFA}{Multi--factor authentication}
+\newacronym{mfa}{MFA}{Multi-factor authentication}
 \newacronym{gsm}{GSM}{Global System for Mobile Communications, originally Groupe Spécial Mobile}
 \newacronym{umts}{UMTS}{Universal Mobile Telecommunications System}
 \newacronym{dtw}{DTW}{Dynamic time warping}
@@ -10,6 +10,6 @@
 \newacronym{sql}{SQL}{Structured Query Language}
 \newacronym{api}{API}{Application Programming Interface}
 \newacronym{apk}{APK}{Android \gls{app} package file}
-\newacronym{ide}{IDE}{Integrated development environment}
+\newacronym{ide}{IDE}{Integrated Development Environment}
 \newacronym{usb}{USB}{Universal Serial Bus}
 \newacronym{wifi}{WiFi}{A local area wireless networking technology}
