Updates from ShareLaTeX

--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -243,7 +243,7 @@
 @misc{idc2015wristmarketshare,
   title = {Market share of smart wristwear shipments worldwide by operating system in 2015 and 2019},
   author = {{IDC}},
-  howpublished = {\url{http://www.statista.com/statistics/466563/share-of-smart-wristwear-shipments-by-operating-system-worldwide/}},
+  howpublished = {\url{http://www.statista.com/statistics/466563/}},
   note = {Statista, Accessed: 2016-01-09}
 }
 
@@ -307,7 +307,7 @@
 @misc{gartner2015smartosmarketshare,
   title = {Global market share held by the leading smartphone operating systems in sales to end users from 1st quarter 2009 to 3rd quarter 2015},
   author = {{Gartner}},
-  howpublished = {\url{http://www.statista.com/statistics/266136/global-market-share-held-by-smartphone-operating-systems/}},
+  howpublished = {\url{http://www.statista.com/statistics/266136/}},
   note = {Statista, Accessed: 2016-01-16}
 }
 
