Updates from ShareLaTeX

--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -5,6 +5,7 @@ In this paper, we analyze the patterns for motion, determined by measuring accel
 \vspace{3cm}
 \selectlanguage{ngerman}
 \noindent
-Menschen besitzen charakteristische Verhaltensmuster, durch die sie eindeutig identifiziert werden können. Durch ständig mitgeführte Mobilgeräte wie Smartphones oder Smartwatches, können diese Muster aufgezeichnet und analysiert werden. Die daraus abgeleiteten Merkmale können als zusätzlicher Faktor bei Multi"=Faktor"=Authentifizierungsverfahren oder als Angriffserkennungssystem eingesetzt werden.
+Menschen besitzen charakteristische Verhaltensmuster, durch die sie eindeutig identifiziert werden können. Mit ständig mitgeführten Mobilgeräten wie Smartphones oder Smartwatches, können diese Muster aufgezeichnet und analysiert werden. Die daraus abgeleiteten Merkmale können als zusätzlicher Faktor bei Multi"=Faktor"=Authentifizierungsverfahren oder als Angriffserkennungssystem eingesetzt werden.
 Im Rahmen dieser Arbeit werden diese Muster anhand von Beschleunigungssensoren hinsichtlich effizienter und präziser Verhaltensmustererkennung analysiert. Diese Mustererkennungsverfahren werden durch Prototypen einer Android Smartphone und Smartwatch App demonstriert.
 \selectlanguage{american}
+\frenchspacing
