--- a/pages/acknowledgements.tex
+++ b/pages/acknowledgements.tex
@@ -13,6 +13,6 @@ Special thanks go to Prof. Dr. Senjun Song and Nils Kannengießer, who gave me t
 
 Many thanks also go to the Chair of Operating Systems at \gls{tum} for hosting this thesis and Prof. Dr. Uwe Baumgarten as a supervisor. The Chair of Operating Systems provided test devices, crucial for the concept of this thesis.
 
-I also like to thank several students from the Andoid practical course 2015/16 for generation of test data and H.\ Wang, T.\ Lai and R.\ Choudhury for their paper on Motion Leaks\cite{wang2015mole}, which initially sparked the ideas outlined in this thesis. Also thanks to many unnamed proofreaders and reviewers and everyone that supported me during writing.
+I also like to thank several students from the Andoid practical course 2015/16 for generation of test data and H.\ Wang, T.\ Lai and R.\ Choudhury for their paper on Motion Leaks\cite{wang2015mole}, which initially sparked the ideas outlined in this thesis. Also thanks to many unnamed proofreaders, reviewers and everyone that supported me during writing.
 
 \cleardoublepage{}
