--- a/bibliography/literature.bib
+++ b/bibliography/literature.bib
@@ -349,6 +349,6 @@
 }
 
 @misc{smartyRing,
-  howpublished = {\url{http://http://smartyring.com/}},
+  howpublished = {\url{http://smartyring.com/}},
   note = {Accessed: 2016-02-05}
 }
