--- a/pages/abstract.tex
+++ b/pages/abstract.tex
@@ -1,6 +1,6 @@
 \chapter{\abstractname}
 Every person displays characteristic patterns of behavior, that can be used to verify her or his identity. With the rise of personal smart devices, \eg smartwatches or smartphones, these patterns can be recorded and analyzed. The resulting characteristics can be used as an additional factor in Multi-Factor Authentication or used as an intrusion detection system by reporting anomalies.
-In this paper, we analyze the patterns for motion, determined by measuring acceleration. We then evaluate how to efficiently, accurately, and practically extract behavioral patterns, identifying individual users. Furthermore, we developed Android smartphone and smartwatch app prototypes demonstrating the identification capabilities.
+In this thesis, we analyze the patterns for motion, determined by measuring acceleration. We then evaluate how to efficiently, accurately, and practically extract behavioral patterns, identifying individual users. Furthermore, we developed Android smartphone and smartwatch app prototypes demonstrating the identification capabilities.
 
 \vspace{3cm}
 \selectlanguage{ngerman}
