Updates from ShareLaTeX

--- a/pages/acknowledgements.tex
+++ b/pages/acknowledgements.tex
@@ -9,7 +9,7 @@
 
 \vspace{1cm}
 
-Special thanks go to Prof. Dr. Senjun Song and Nils Kannengießer, who gave me the opportunity to work on an international project. Nils especially guided and taught me many things used in this thesis, esp.\ during the Android Practical Course in summer 2015.
+Special thanks go to Prof. Dr. Senjun Song and Nils Kannengießer, who gave me the opportunity to work on an international project. Nils especially guided and taught me many things used in this thesis, especially during the Android Practical Course in summer 2015.
 
 Many thanks also go to the Chair of Operating Systems at \gls{tum} for hosting this thesis and Prof. Dr. Uwe Baumgarten as a supervisor. The Chair of Operating Systems provided test devices, crucial for the concept of this thesis.
 
